# binder-linux

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  binder-linux.sublime-project  env.sh
android/: CMakeLists.txt
android/cutils/: CMakeLists.txt  ashmem-dev.c  log.c  log.h
android/private/: android_filesystem_config.h
android/selinux/: android.c  android.h
android/utils/: SystemClock.cpp
binder/: IPCThreadState.cpp  Parcel.cpp
include/: binder_linux_assert.h  cassert
include/android/: log.h
include/binder/: Parcel.h
include/cutils/: atomic.h
include/log/: log.h
include/utils/: Thread.h
patches/: aidl.patch  core_14.patch  kernel-headers.patch  libbase_14.patch  libvintf_14.patch  native.patch
sample/: IBinderEcho.aidl  test_main.cpp
servicemanager/: Access.cpp  bctest.c  binder.h
test/: test_main.cpp
tests/: aidl_parser_fuzzer.cpp  aidl_test_client.cpp  aidl_test_client.h  aidl_test_client_builtin_transactions.cpp  aidl_test_client_defaultimpl.cpp  aidl_test_client_delegate.cpp  aidl_test_client_file_descriptors.cpp  aidl_test_client_loggable_interface.cpp  aidl_test_client_ndk_delegate.cpp  aidl_test_client_ndk_loggable_interface.cpp  aidl_test_client_ndk_nested.cpp  aidl_test_client_ndk_nullables.cpp  aidl_test_client_ndk_parcelables.cpp  aidl_test_client_ndk_primitives_test.cpp  aidl_test_client_ndk_strings_test.cpp  aidl_test_client_ndk_versioned_interface.cpp  aidl_test_client_nested.cpp  aidl_test_client_nullables.cpp  aidl_test_client_parcelables.cpp  aidl_test_client_primitives.cpp  aidl_test_client_renamed_interface.cpp  aidl_test_client_service_exceptions.cpp  aidl_test_client_utf8_strings.cpp  aidl_test_client_versioned_interface.cpp  aidl_test_service.cpp  bad_parcelable.cpp  bad_parcelable.h  fake_io_delegate.cpp  fake_io_delegate.h  test_util.cpp  test_util.h
tests/aidl/android/aidl/fixedsizearray/: FixedSizeArrayExample.aidl
tests/aidl/android/aidl/loggable/: Data.aidl  Enum.aidl  ILoggableInterface.aidl  Union.aidl
tests/aidl/android/aidl/tests/: BackendType.aidl  BadParcelable.aidl  CircularParcelable.aidl  DeprecatedEnum.aidl  DeprecatedParcelable.aidl  FixedSize.aidl  GenericStructuredParcelable.aidl  ICircular.aidl  ICppJavaTests.aidl  IDeprecated.aidl  INamedCallback.aidl  INewName.aidl  IOldName.aidl  ITestService.aidl  IntEnum.aidl  ListOfInterfaces.aidl  LongEnum.aidl  OtherParcelableForToString.aidl  ParcelableForToString.aidl  RecursiveList.aidl  UnionWithFd.aidl
tests/aidl/android/aidl/tests/extension/: ExtendableParcelable.aidl  MyExt.aidl  MyExt2.aidl  MyExtLike.aidl
tests/aidl/android/aidl/tests/generic/: Baz.aidl  IFaz.aidl
tests/aidl/android/aidl/tests/immutable/: Bar.aidl  Foo.aidl  IBaz.aidl  Union.aidl
tests/aidl/android/aidl/tests/map/: Bar.aidl  Foo.aidl  IEmpty.aidl  IMapTest.aidl  IntEnum.aidl
tests/aidl/android/aidl/tests/nested/: ParcelableWithNested.aidl
tests/aidl/android/aidl/tests/permission/: INoPermission.aidl  IProtected.aidl  IProtectedInterface.aidl
tests/aidl/android/aidl/tests/permission/platform/: IProtected.aidl
tests/aidl/android/aidl/tests/unions/: EnumUnion.aidl  UnionInUnion.aidl
tests/aidl/android/aidl/versioned/tests/: BazUnion.aidl  Foo.aidl  IFooInterface.aidl
tools/: binder_device.c
